--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -42,8 +42,7 @@ authors="bagu_chan" #optional
 
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-Adds compatibility between TofuCraftReload and Farmer's delight!
-some TofuCraftReload Recipe Support and replace to farmer's delight recipe!
+This mod add Japanese Festival Foods as farmers delight addon!
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.maturidelight]] #optional
